--- a/components/reservation/TermsCard.module.scss
+++ b/components/reservation/TermsCard.module.scss
@@ -36,8 +36,6 @@
   }
 }
 
-
-
 .listTime {
   min-height: 240px;
   list-style: none;
@@ -63,7 +61,9 @@
 
   a {
     display: inline;
-    text-decoration: underline;
+    text-decoration-style: solid;
+    text-decoration-line: underline;
+    text-decoration-color: variables.$primary;
   }
 }
 
@@ -76,7 +76,9 @@
     }
 
     a {
-      text-decoration: underline;
+      text-decoration-style: solid;
+      text-decoration-line: underline;
+      text-decoration-color: variables.$primary;
       display: inline-block;
       padding-left: variables.$spacing * 0.5;
     }
